tests/expectations/compiler/operations/abs_type_fail.out
Error [ETYC0372117]: Expected a signed integer but type `u16` was found.
    --> compiler-test:3:24
     |
   3 |         return (true ? 1u16.abs() : 2u16.abs()) as u8;
     |                        ^^^^^^^^^^
Error [ETYC0372117]: Expected a signed integer but type `u16` was found.
    --> compiler-test:3:37
     |
   3 |         return (true ? 1u16.abs() : 2u16.abs()) as u8;
     |                                     ^^^^^^^^^^
